[package]
name = "acvm"
description = "The virtual machine that processes ACIR given a backend/proof system."
# x-release-please-start-version
version = "1.0.0-beta.18"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
rustc-hash.workspace = true
acir.workspace = true
brillig_vm.workspace = true
acvm_blackbox_solver.workspace = true
indexmap.workspace = true

[features]
bn254 = ["acir/bn254", "brillig_vm/bn254", "acvm_blackbox_solver/bn254"]
bls12_381 = [
    "acir/bls12_381",
    "brillig_vm/bls12_381",
    "acvm_blackbox_solver/bls12_381",
]

[dev-dependencies]
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }
ark-ff.workspace = true
ark-bn254.workspace = true
bn254_blackbox_solver.workspace = true
insta.workspace = true
proptest.workspace = true
num-bigint.workspace = true

criterion.workspace = true
pprof.workspace = true

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "arithmetic_solver"
harness = false
