[package]
name = "acvm_js"
description = "Typescript wrapper around the ACVM allowing execution of ACIR code"
# x-release-please-start-version
version = "0.30.0"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
acvm = { path = "../acvm", default-features = false }
barretenberg_blackbox_solver = { path = "../barretenberg_blackbox_solver", default-features = false }
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys.workspace = true
const-str = "0.5.5"

[build-dependencies]
build-data = "0.1.3"
pkg-config = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[features]
default = ["bn254"]
bn254 = ["acvm/bn254", "barretenberg_blackbox_solver/bn254"]
bls12_381 = ["acvm/bls12_381", "barretenberg_blackbox_solver/bls12_381"]
