[package]
name = "acvm_js"
description = "Typescript wrapper around the ACVM allowing execution of ACIR code"
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
acvm.workspace = true
bn254_blackbox_solver = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
gloo-utils.workspace = true
js-sys.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
tracing-web.workspace = true

const-str = "0.5.5"

# This is an unused dependency, we are adding it
# so that we can enable the js feature in getrandom.
getrandom = { workspace = true, features = ["js"] }

[build-dependencies]
build-data.workspace = true
pkg-config = "0.3"

[dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = ["bn254"]
bn254 = ["acvm/bn254", "dep:bn254_blackbox_solver"]
bls12_381 = ["acvm/bls12_381"]
