[package]
name = "acvm_blackbox_solver"
description = "A solver for the blackbox functions found in ACIR and Brillig"
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir.workspace = true
thiserror.workspace = true
num-bigint = "0.4"

blake2 = "0.10.6"
blake3 = "1.5.0"
sha2.workspace = true
keccak = "0.1.4"
k256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
p256 = { version = "0.11.0", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }

libaes = "0.7.0"

[dev-dependencies]
proptest.workspace = true
num-prime = { version = "0.4.4", default-features = false, features = ["big-int"] }

[features]
bn254 = ["acir/bn254"]
bls12_381 = ["acir/bls12_381"]
