[package]
name = "acvm_blackbox_solver"
description = "A solver for the blackbox functions found in ACIR and Brillig"
# x-release-please-start-version
version = "1.0.0-beta.18"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir.workspace = true
thiserror.workspace = true
log.workspace = true

blake2 = "0.11.0-rc.3"
blake3 = "1.8.2"
sha2.workspace = true
keccak = "0.2.0-rc.0"
k256 = { workspace = true, features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }
p256 = { workspace = true, features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "digest",
    "arithmetic",
] }

libaes = "0.7.0"

[dev-dependencies]
proptest.workspace = true
num-prime = { version = "0.4.4", default-features = false, features = ["big-int"] }
criterion.workspace = true
pprof.workspace = true

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "logic"
harness = false

[features]
bn254 = ["acir/bn254"]
bls12_381 = ["acir/bls12_381"]
