[package]
name = "bn254_blackbox_solver"
description = "Solvers for black box functions which are specific for the bn254 curve"
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir.workspace = true
acvm_blackbox_solver.workspace = true
hex.workspace = true
lazy_static.workspace = true

ark-bn254.workspace = true
grumpkin.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
num-bigint.workspace = true

[dev-dependencies]
ark-std.workspace = true
criterion = "0.5.0"
pprof = { version = "0.14", features = [
    "flamegraph",
    "frame-pointer",
    "criterion",
] }

[[bench]]
name = "criterion"
harness = false
